--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-plugin-vue": "^8.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
     "typescript": "~4.7.2",
     "vite": "^2.9.9",
     "vue-tsc": "^0.35.2"
